parser: Implement first draft of SymEx rules